# mdsql

./: Cargo.toml  README.md
docs/: index.html
src/: error.rs  main.rs  markdown.rs  query.rs  table.rs
